# Agentic-RAG-Chatbot

./: PPT SLRIS.pptx  README.md  app.py  pyproject.toml  requirements.txt
agents/: ingestion_agent.py  llm_response_agent.py  mcp.py  retrieval_agent.py
static/: style.css
temp/: PPT SLRIS.pptx
utils/: text_splitter.py
