[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "flask>=3.1.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-groq>=0.3.5",
    "langchain-huggingface>=0.3.0",
    "langchain-mcp-adapters>=0.1.8",
    "langgraph>=0.5.1",
    "mcp>=1.10.1",
    "pypdf>=5.7.0",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.46.1",
]
